# TicTacToe

./: README.org
Cpp/: CMakeLists.txt  main.cpp
D/: dub.sdl
D/src/: bitboard.d  main.d
Python/: bitboard.py  coords  engine.py  main.py
cpp/: .clang-format  CMakeLists.txt  bitboard.hpp  engine.hpp  main.cpp  test.cpp
python/: bitboard.py  engine.py  main.py  pytest.ini
